# iati-data-downloader

./: .funcignore  .gitignore  README.md  function_app.py  local.settings-example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: linters.yml  tests.yml
src/: azure_blob.py  context.py  data_downloader_exceptions.py  http.py  iati_utilities.py  response_helpers.py
tests/artefacts/dataset-files/: activity_file_01.xml  test_foundation_a-dataset-001-iso-8859-1  test_foundation_a-dataset-001-utf-16-be  test_foundation_a-dataset-001-utf-16-le  test_foundation_a-dataset-001-utf-32-be  test_foundation_a-dataset-001-utf-32-le  test_foundation_a-dataset-001-utf-8  test_foundation_a-dataset-001-utf-8-with-bom
tests/helpers/: azure.py  context.py
tests/integration/: test_azure_blob_functions.py  test_dataset_download.py
tests/test-environment/: .env  docker-compose.yml  mockoon-server-config.json
tests/unit/: test_iati_utilities.py
